Scripts/ARMTemplates/azFW.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "adminUsername": {
      "type": "string",
      "defaultValue": "cloudadmin",
      "metadata": {
        "description": "Username for the Virtual Machine."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "defaultValue": "mySecretTestAdminPassword",
      "metadata": {
        "description": "Password for the Virtual Machine."
      }
    }
  },
  "variables": {
    "location": "[resourceGroup().location]",
    "VNetName": "vnetFW-01",
    "vnetAddressPrefix": "10.0.0.0/16",
    "azFWSubnetPrefix": "10.0.0.0/24",
    "subnet1Prefix": "10.0.1.0/24",
    "subnet2Prefix": "10.0.2.0/24",
    "nextHopIP": "10.0.0.4",               // it is the IP of the firewall
    "subnetFWName": "AzureFirewallSubnet", // "AzureFirewallSubnet" is a fixed name for the Azure firewall. do not change it!
    "subnet1Name": "subnet1",
    "subnet2Name": "subnet2",
    "vm1PublicIPName": "vm1-PubIP",
    "vm2PublicIPName": "vm2-PubIP",
    "azFWPublicIPName": "fw-pubIP",
    "nsgName": "nsg",
    "vm1NicName": "vm1-Nic",
    "vm2NicName": "vm2-Nic",
    "vm1Name": "vm1",
    "vm2Name": "vm2",
    "RTsubnet1": "RT-Subnet1",
    "RTsubnet2": "RT-subnet2",
    "fwName": "FW1",
    "subnet1Id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VNetName'), variables('subnet1Name'))]",
    "subnet2Id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VNetName'), variables('subnet2Name'))]",
    "subnetFWId": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('VNetName'), variables('subnetFWName'))]",
    "azFWPublicIpId": "[resourceId('Microsoft.Network/publicIPAddresses',variables('azFWPublicIPName'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('RTsubnet1')]",
      "apiVersion": "2018-06-01",
      "location": "[variables('location')]",
      "properties": {
        "disableBgpRoutePropagation": false,
        "routes": [
          {
            "name": "to-subnet2",
            "properties": {
              "addressPrefix": "[variables('subnet2Prefix')]",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[variables('nextHopIP')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('RTsubnet2')]",
      "apiVersion": "2018-06-01",
      "location": "[variables('location')]",
      "properties": {
        "disableBgpRoutePropagation": false,
        "routes": [
          {
            "name": "to-subnet1",
            "properties": {
              "addressPrefix": "[variables('subnet1Prefix')]",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[variables('nextHopIP')]"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('VNetName')]",
      "apiVersion": "2018-06-01",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/routeTables', variables('RTsubnet1'))]",
        "[resourceId('Microsoft.Network/routeTables', variables('RTsubnet2'))]"
      ],
      "tags": {
        "displayName": "[variables('VNetName')]"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnet1Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet1Prefix')]",
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('RTsubnet1'))]"
              }
            }
          },
          {
            "name": "[variables('subnetFWName')]",
            "properties": {
              "addressPrefix": "[variables('azFWSubnetPrefix')]"
            }
          },
          {
            "name": "[variables('subnet2Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet2Prefix')]",
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('RTsubnet2'))]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[variables('azFWPublicIPName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2018-06-01",
      "location": "[variables('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4"
      }
    },
    {
      "name": "[variables('vm1PublicIPName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2018-06-01",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "name": "[variables('vm2PublicIPName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2018-06-01",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "name": "[variables('nsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-06-01",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "myNSGRuleRDP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "myNSGRuleSSH",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-06-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('vm1NicName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses/', variables('vm1PublicIPName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/', variables('VNetName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('vm1PublicIPName'))]"
              },
              "subnet": {
                "id": "[variables('subnet1Id')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
        }
      }
    },
    {
      "apiVersion": "2018-06-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('vm2NicName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/', variables('VNetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('vm2PublicIPName'))]"
              },
              "subnet": {
                "id": "[variables('subnet2Id')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
        }
      }
    },
    {
      "name": "[variables('vm1Name')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2017-12-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('vm1NicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_DS1_v2"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2012-R2-Datacenter",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Windows",
            "createOption": "FromImage",
            "diskSizeGB": 127
          },
          "dataDisks": []
        },
        "osProfile": {
          "computerName": "[variables('vm1Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "secrets": []
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vm1NicName'))]"
            }
          ]
        }
      }
    },
    {
      "name": "[variables('vm2Name')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2017-12-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('vm2NicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_DS1_v2"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2012-R2-Datacenter",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Windows",
            "createOption": "FromImage",
            "diskSizeGB": 127
          },
          "dataDisks": []
        },
        "osProfile": {
          "computerName": "[variables('vm2Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "secrets": []
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vm2NicName'))]"
            }
          ]
        }
      }
    },
    {
      "apiVersion": "2018-06-01",
      "type": "Microsoft.Network/azureFirewalls",
      "name": "[variables('fwName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('VNetName'))]",
        "[concat('Microsoft.Network/publicIPAddresses/', variables('azFWPublicIPName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "IpConf",
            "properties": {
              "subnet": {
                "id": "[variables('subnetFWId')]"
              },
              "InternalPublicIPAddress": {
                "id": "[variables('azFWPublicIpId')]"
              }
            }
          }
        ],
//        "applicationRuleCollections": [
//          {
//            "name": "appRc1",
//            "properties": {
//              "priority": 101,
//              "action": {
//                "type": "Allow"
//              },
//              "rules": [
//                {
//                  "name": "appRule1",
//                  "protocols": [
//                    {
//                      "port": "80",
//                      "protocolType": "http"
//                    },
//                    {
//                      "port": "443",
//                      "protocolType": "https"
//                    }
//                  ],
//                  "targetUrls": [
//                    "*microsoft.com"
//                  ]
//                }
//              ]
//           }
//          }
//        ],
        "networkRuleCollections": [
          {
            "name": "netRc1",
            "properties": {
              "priority": 200,
              "action": {
                "type": "Allow"
              },
              "rules": [
                {
                  "name": "netRule1",
                  "protocols": [
                    "TCP"
                  ],
                  "sourceAddresses": [
                    "[variables('subnet1Prefix')]"
                  ],
                  "destinationAddresses": [
                    "[variables('subnet2Prefix')]"
                  ],
                  "destinationPorts": [
                    "6000",
                    "80",
                    "22",
                    "3389"
                  ]
                }
              ]
            }
          },
          {
            "name": "netRc2",
            "properties": {
              "priority": 300,
              "action": {
                "type": "Allow"
              },
              "rules": [
                {
                  "name": "netRule2",
                  "protocols": [
                    "TCP"
                  ],
                  "sourceAddresses": [
                    "[variables('subnet2Prefix')]"
                  ],
                  "destinationAddresses": [
                    "[variables('subnet1Prefix')]"
                  ],
                  "destinationPorts": [
                    "6000",
                    "80",
                    "22",
                    "3389"
                  ]
                }
              ]
            }
          }
        ]
      }
    }
  ]
}
